	* Default constructor is marked `[[deprecated]]`
	* Added convenience constructor for cases where data array should be defaulted
	* `move` methods are `constexpr` and `noexcept`
	* `setVoxelSize(const sf::Vector2u&) is `noexcept`
 * All of `dgm::Object` interface is `noexcept`
	* Also most of the concrete implementations are now `constexpr`
	* All default constructors are marked `[[deprecated]]`
 * Fixed `dgm::DynamicBuffer::isIndexValid` not checking array boundaries

dgm-lib v2.2.2
 * Added `dgm::DynamicBuffer::isValidIndex` for testing whether there is something at index
 * Added `dgm::DynamicBuffer::at` which either returns `std::reference_wrapper` for item at index or empty `std::optional`
 * Fixed `dgm::SpatialIndex::clear` being in private interface (now public)

dgm-lib v2.2.1
 * `dgm::DynamicBuffer` and `dgm::StaticBuffer` have method `clone` for explicit copying and are movable and move-assignable
 * Introduced `dgm::SpatialIndex` which acts as a base class for `dgm::SpatialBuffer` and contains only interface for spatial lookup, not the physical storage
	* It also has a `clear` method for removing all items from lookup
 * Fixed signature of `dgm::Rect::getCenter` - it returned a reference to a temporary

dgm-lib v2.2.0
 * Removed `Conversion` class, implementation moved to `Math`
	* `PIOVER180` and `_180OVERPI` are now defined using std::numbers::pi_v
	* `cartesianToPolar` now returns struct `PolarCoords`
	* `polarToCartesian` now accepts struct `PolarCoords`
 * Overhauled `Math` class
	* `vectorSize` renamed to `getSize`
	* `getUnitVector` renamed to `toUnit`
	* `rotateVector` renamed to `getRotated`
	* `dotProduct` renamed to `getDotProduct`
		* Also fixed bad formula for this function
	* `approxEqual` renamed to `isApproxEqual`
	* `radialDifference` renamed to `getRadialDifference`